
		// THIS CAN BE REMOVED, DON'T NEED IT ANYMORE
		[sites]
		minimum_year_value=2030 
                

--===========================( KNOWN BUG in v1.5.* )================================-	      

		sometimes for some people catching stops, need restart

--=============================( SLFTP v1.5.3.1 )=================================- 
		{#} !rulehelp tvcurrent shows correct help
		{#} !lookup works with sections which are only mapped. Don't need to be under [sections]
		{^} !tweak automatically switch to lowercase values
		{^} RegExpr updated to latest version
		{^} Archive sections can be added with !setdir using ARCH-SECTIONNAME
		{^} !status shows SSL Version now + URL, IMDB and NFO count are back

--=============================( SLFTP v1.5.3.0 )=================================- 
		{+} '!transfer srcsite dstsite srcdir dstdir rlsname' with sending to full path / slftp section *BETA*
		{+} !testcolors to display a line with all the irc colors
		{+} slftp.skip with regex - no need to add an entry for every language
		    [skiplist-X264-HD-FR], [skiplist-X264-HD-NL], etc can be togehter now: [skiplist-X264-HD-*]
		{^} slftp.precatcher entries can be mapped without a need to have it under [sections]
		{^} !credits with colors, calculating, ... + matching more ftpd stat lines + option to change !credits regexps in slftp.ini
		{^} Update to latest LibTar
		{^} !indexquery results output changed
		{^} Update of tvinfo regexps to get excactly showvalues
		{#} !setdown reply is correct now
		{#} !tweaksocks5 don't respond always with "Too few parameters."
		{#} !addsocks5 uppercases the input values now
		{#} No more trying to trade into wrong subdirs
		{#} Use presites as source when imdb rules are set
		
--=============================( SLFTP v1.5.2.2 )=================================- 
		{#} 'Invalid argument index in format' error message fixed
		{#} !addgn is working again
		{#} !setsocks5 is now case insensitive
		{^} No [SKIP] message after [PRE] message
	