@@ -47,7 +47,8 @@
 
 --=============================( SLFTP v1.5.3.1 )=================================- 
 		{#} !rulehelp tvcurrent shows correct help
-		{#} !lookup works with sections which are only mapped. Don't need to be under [sections]
+		{#} Now !lookup works with sections which are only mapped - like everywhere else
+		{#} Fix a bug for !setprecmd, so now it support to set 'SITE PRE <rlsname> SECTION' for every section
 		{^} !tweak automatically switch to lowercase values
 		{^} RegExpr updated to latest version
 		{^} Archive sections can be added with !setdir using ARCH-SECTIONNAME
